# advent-of-code-2025

./: CMakeLists.txt
day1/: main.cpp  main2.cpp
day10/: input-test.txt  main1.cpp  main2.cpp  output.txt  solver.py  sum.sh
day2/: main1.cpp  main2.cpp
day4/: main1.cpp  main2.cpp
day5/: main1.cpp  main2.cpp
day6/: main1.cpp  main2.cpp
day7/: main1.cpp  main2.cpp
day8/: main1.cpp  main2.cpp
day9/: main1.cpp  main2.cpp
